# d2d_win_wrapper

./: Cargo.toml
src/: context.rs  context_holder.rs  lib.rs
src/d2d/: brush.rs  d2d_fun.rs  factory.rs  geometry_sink.rs  graphic.rs  mod.rs  render_target.rs
src/properties/: circle_property.rs  ellipse_property.rs  gradient_color_property.rs  line_property.rs  mod.rs  rect_property.rs  text_property.rs
src/types/: mod.rs  point.rs  rect.rs
src/types/color/: gradient_color.rs  mod.rs  solid_color.rs
