[package]
name = "d2d_win_wrapper"
version = "0.0.0"
license = "Apache-2.0"
edition = "2021"
description = "developing"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-builder = "0.16.0"

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    "Win32_System_Com",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_DirectComposition",
    "Foundation_Numerics",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Dxgi",
    "Win32_UI_Animation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
]